Fix codeblock overflow

--- a/www/site.css
+++ b/www/site.css
@@ -72,6 +72,7 @@ pre {
     font-feature-settings: normal;
     padding: 0.75rem;
     border-radius: 8px;
+    overflow: auto;
 }
 
 #comments {
